tried to create dockerfile, docker-compose for app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-django-celery-results
-lxml
-redis
+django-celery-results==2.4.0
+djangorestframework==3.14.0
+django==4.1.6
+eventlet==0.33.3
+lxml==4.9.2
+redis==4.4.2
+newspaper3k==0.2.8
+pydantic==1.10.4
+googletrans==3.1.0a0
+vaderSentiment==3.3.2
+psycopg2==2.9.5
+celery
