tried to configure docker-compose and celery work correct

--- a/.env
+++ b/.env
@@ -1,5 +1,15 @@
-DB_NAME=article_aggregator
-DB_USER=postgres
-DB_PASSWORD=admin
-DB_HOST=127.0.0.1
-DB_PORT=5432
+POSTGRES_DB=article_aggregator
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=admin
+# POSTGRES_HOST=article_aggregator_psql
+# POSTGRES_PORT=63441
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=5432
+
+
+REDIS_HOST=localhost
+# REDIS_HOST=redis
+REDIS_PORT=6379
+
+RABBITMQ_DEFAULT_USER=rabbit_user
+RABBITMQ_DEFAULT_PASS=rabbit_password
