--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,7 @@ gunicorn
 gevent
 dateparser
 django-htmx==1.14.0
+vaderSentiment==3.3.2
+googletrans==3.1.0a0
+newspaper3k==0.2.8
 # django_celery_beat
