--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,4 @@ gunicorn
 gevent
 dateparser
 django-htmx==1.14.0
-vaderSentiment==3.3.2
-googletrans==3.1.0a0
-newspaper3k==0.2.8
-# django_celery_beat
+django_celery_beat==2.5.0
