added .env file

--- a/.env
+++ b/.env
@@ -1,17 +1,25 @@
 POSTGRES_DB=article_aggregator
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=admin
-# POSTGRES_HOST=article_aggregator_psql
+POSTGRES_HOST=article_aggregator_psql
 # POSTGRES_PORT=63441
-POSTGRES_HOST=127.0.0.1
+# POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 
 
-REDIS_HOST=localhost
-# REDIS_HOST=redis
+# REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_DEFAULT_HOST=rabbitmq
+# RABBITMQ_DEFAULT_HOST=localhost
+RABBITMQ_DEFAULT_PORT=5672
 RABBITMQ_DEFAULT_USER=rabbit_user
 RABBITMQ_DEFAULT_PASS=rabbit_password
+RABBITMQ_DEFAULT_VHOST=/
+
 
 UNKNOWN_AUTHOR_NAME='unknown'
+
+DB_ADMIN_PASSWORD='n0HIpW3VY8O4'
